# code-collector

./: .gitignore  Cargo.toml  README.md  collect_code.py  run.bat
src/: app.rs  main.rs
src/models/: dir_node.rs  export_mode.rs  file_node.rs  mod.rs  theme.rs
src/operations/: export.rs  mod.rs  search.rs  selection.rs
src/scanner/: mod.rs  thread.rs
src/ui/: mod.rs  panels.rs  styles.rs  tree.rs
