[package]
name = "code_collector"
version = "1.0.0"
edition = "2021"
description = "A desktop tool to extract and filter code for LLM context."

[dependencies]
eframe = "0.29.1"
egui = "0.29"
walkdir = "2.4"
arboard = "3.4"
rfd = "0.15"
open = "5.3" 

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce parallel code generation for better optimization
strip = true        # Strip symbols from binary to reduce size